--- a/Money.Tests/packages.config
+++ b/Money.Tests/packages.config
@@ -1,14 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.12" targetFramework="net461" />
   <package id="MediatR" version="3.0.1" targetFramework="net461" />
-  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net461" />
-  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net461" />
-  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.5.0" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.5.0" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="xunit" version="2.3.1" targetFramework="net461" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
-  <package id="xunit.analyzers" version="0.7.0" targetFramework="net461" />
+  <package id="xunit.analyzers" version="0.8.0" targetFramework="net461" />
   <package id="xunit.assert" version="2.3.1" targetFramework="net461" />
   <package id="xunit.core" version="2.3.1" targetFramework="net461" />
   <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net461" />
