--- a/Money.Web/packages.config
+++ b/Money.Web/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net461" />
   <package id="MediatR" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
-  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net461" />
-  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net461" />
-  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net461" />
-  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.5.0" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.5.0" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net461" />
   <package id="Nancy" version="1.4.4" targetFramework="net461" />
   <package id="Nancy.Bootstrappers.StructureMap" version="1.4.3" targetFramework="net461" />
   <package id="Nancy.Hosting.Aspnet" version="1.4.1" targetFramework="net461" />
@@ -17,6 +18,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="StructureMap" version="4.5.3" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
 </packages>
