--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
+    "antd": "^3.13.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
