--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
     "antd": "^3.13.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-scripts": "2.1.3",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1"
@@ -28,5 +28,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5000"
 }
