--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
     "antd": "^3.13.0",
+    "highcharts": "^7.0.3",
+    "highcharts-react-official": "^2.1.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.3",
