--- a/client/package.json
+++ b/client/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.13",
-    "@types/node": "10.12.18",
-    "@types/react": "16.7.22",
-    "@types/react-dom": "16.0.11",
     "antd": "^3.13.0",
     "highcharts": "^7.0.3",
     "highcharts-react-official": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.3",
+    "react-scripts": "2.1.8"
+  },
+  "devDependencies": {
     "tslint": "^5.12.1",
-    "typescript": "^3.3.1"
+    "typescript": "^3.3.1",
+    "@types/jest": "23.3.13",
+    "@types/node": "10.12.18",
+    "@types/react": "16.7.22",
+    "@types/react-dom": "16.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
