--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "copy": "rm -r ../Money.Web/wwwroot/* && cp -r ./build/* ../Money.Web/wwwroot"
   },
   "eslintConfig": {
     "extends": "react-app"
