--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "copy": "rm -r ../Money.Web/wwwroot/* && cp -r ./dist/* ../Money.Web/wwwroot"
+    "copy": "rm -r ../Money.Web/wwwroot/* && cp -r ./dist/* ../Money.Web/wwwroot",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
+    "@ant-design/icons": "^6.1.0",
     "antd": "^5.12.8",
     "highcharts": "^7.2.1",
     "highcharts-react-official": "^2.2.2",
@@ -22,16 +24,18 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.4.2",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.9.3",
+    "vite": "^5.0.8",
+    "vitest": "^4.0.16"
   }
 }
